# Curfew

./: .coverage  MANIFEST.in  README.md  pyproject.toml  test_app.py
curfew/: autostart.py  config.py  curfew_main.py  main.py  time_check.py  uninstaller.py
curfew.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
curfew/scripts/: create_symlink.sh  remove_symlink.sh  uninstall.sh
tests/: test_autostart.py  test_config.py  test_curfew.py  test_date_type.py  test_date_type_full.py  test_shutdown.py  test_time_check.py
