[project]
name = "curfew"
dynamic = ["version"]
description = "Curfew - 电脑定时关机/睡眠工具"
requires-python = ">=3.8"
dependencies = [
    "chinese-calendar>=1.11.0",
    "flask>=3.0.3",
    "python-daemon>=3.1.2",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.scripts]
curfew = "curfew.curfew_main:cli"

[tool.setuptools]
packages = ["curfew"]
include-package-data = true

[tool.setuptools.package-data]
curfew = ["templates/*.html", "static/css/*.css", "static/js/*.js"]

[tool.uv]
python-preference = "only-system"

[tool.hatch.version]
source = "vcs"
tag = true

[dependencies]
flask = "*"
chinese-calendar = "*"
python-daemon = "*"

[dev-dependencies]
pytest = "*"
pytest-cov = "*"
hatch-vcs = "*"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "hatch-vcs>=0.3.0",
]
